objects/Credit_Bureau__c.object
<CustomObject>
    <description>This object tracks the multiple Credit Bureaus under Opportunity</description>
    <fields>
        <fullName>Bureau_Checking_Date__c</fullName>
        <label>Bureau Checking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIS_ID_Prospect_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS ID / Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Bureau</relationshipLabel>
        <relationshipName>Credit_Bureau</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_ID__c</fullName>
        <formula>LEFT($User.Job_Code__c , 2) &amp; 
&quot;/&quot; &amp;
$User.RC_Code__c &amp;
&quot;/&quot;
&amp;
Opportunity__r.APP2__c &amp;
&quot;/&quot;
&amp; 
IF(YEAR(TODAY())&lt;2500, TEXT(YEAR(TODAY()) + 543), TEXT(YEAR(TODAY()))) &amp;
&quot;/&quot;
&amp;
Running_Number__c</formula>
        <label>Credit Bureau ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Destroyed_Date__c</fullName>
        <label>Document Destroyed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Checking_Bureau__c</fullName>
        <label>Number of Checking Bureau</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Bureau</relationshipLabel>
        <relationshipName>Credit_Bureau</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Running_Number__c</fullName>
        <label>Running Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Credit Bureau</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Bureau</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>